# solana-token

./: Cargo.toml  README.md
src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
tests/: integration.rs
